# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,14 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import scheduleRouter from "./schedule";
+import financeRouter from "./finance";
+import restaurantRouter from "./restaurant";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(scheduleRouter);
+router.use(financeRouter);
+router.use(restaurantRouter);
 
 export default router;
